# chatroom

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile.am  chatroom.cpp  client.cpp  cmake_install.cmake  configure.ac  features
include/: communicate.h  connection_common.h  interface.h
src/: CMakeLists.txt  Chatroom  cmake_install.cmake  connection_common.c  connection_common.cpp  interface.cpp  server.c
